--- a/public/html/login.html
+++ b/public/html/login.html
@@ -38,10 +38,10 @@
     <div class="max-w-md w-full space-y-8">
       <div>
         <img class="mx-auto h-12 w-auto" src="../icon/JHU.png" alt="Workflow">
-        <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">Sign in to your account</h2>
+        <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900 text-white">Sign in to your account</h2>
         <p class="mt-2 text-center text-sm text-gray-600">
           Or
-          <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500"> start your 14-day free trial </a>
+          <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500"> Stepping in to learn </a>
         </p>
       </div>
       <form class="mt-8 space-y-6" action="#" method="POST">
@@ -60,7 +60,7 @@
         <div class="flex items-center justify-between">
           <div class="flex items-center">
             <input id="remember-me" name="remember-me" type="checkbox" class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
-            <label for="remember-me" class="ml-2 block text-sm text-gray-900"> Remember me </label>
+            <label for="remember-me" class="ml-2 block text-sm text-gray-900 text-white"> Remember me </label>
           </div>
   
           <div class="text-sm">
@@ -82,6 +82,5 @@
       </form>
     </div>
   </div>
-  
 </body>
 </html>
