--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jamia Hamdard</title>
+  <title>JAMIA HAMDARD</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/x-icon" href="../icon/JHU.png">
 
@@ -45,7 +45,7 @@
                 </div>
               </div>
               <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
-                <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Leads</a>
+                <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Lead</a>
 
                 <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Events</a>
 
@@ -64,7 +64,7 @@
                 <div class="-mr-2">
                   <button type="button "
                     class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
-                    <span class="sr-only">Close main menu</span>
+                    <span class="sr-only">Close Main Menu</span>
                     <!-- Heroicon name: outline/x -->
                     <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                       stroke-width="2" stroke="currentColor" aria-hidden="true">
@@ -96,8 +96,8 @@
         <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
           <div class="sm:text-center lg:text-left">
             <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-              <span class="block xl:inline">Jamia Hamdard</span>
-              <span class="block text-indigo-600 xl:inline">Developer Student Club</span>
+              <span class="block xl:inline">JAMIA HAMDARD</span>
+              <span class="block text-indigo-600 xl:inline">Google Developer Student Club</span>
             </h1>
             <p
               class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
